docs-archive/apache-airflow-providers-amazon/9.34.0/_sources/_api/airflow/providers/amazon/aws/triggers/dms/index.rst.txt
airflow.providers.amazon.aws.triggers.dms
=========================================

.. py:module:: airflow.providers.amazon.aws.triggers.dms


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.triggers.dms.DmsReplicationTerminalStatusTrigger
   airflow.providers.amazon.aws.triggers.dms.DmsReplicationConfigDeletedTrigger
   airflow.providers.amazon.aws.triggers.dms.DmsReplicationCompleteTrigger
   airflow.providers.amazon.aws.triggers.dms.DmsReplicationStoppedTrigger
   airflow.providers.amazon.aws.triggers.dms.DmsReplicationDeprovisionedTrigger
   airflow.providers.amazon.aws.triggers.dms.DmsTaskModifyCompleteTrigger
   airflow.providers.amazon.aws.triggers.dms.DmsTableReloadCompleteTrigger


Module Contents
---------------

.. py:class:: DmsReplicationTerminalStatusTrigger(replication_config_arn, waiter_delay = 30, waiter_max_attempts = 60, aws_conn_id = 'aws_default')

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger when an AWS DMS Serverless replication is in a terminal state.

   :param replication_config_arn: The ARN of the replication config.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



.. py:class:: DmsReplicationConfigDeletedTrigger(replication_config_arn, waiter_delay = 30, waiter_max_attempts = 60, aws_conn_id = 'aws_default')

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger when an AWS DMS Serverless replication config is deleted.

   :param replication_config_arn: The ARN of the replication config.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



.. py:class:: DmsReplicationCompleteTrigger(replication_config_arn, waiter_delay = 30, waiter_max_attempts = 60, aws_conn_id = 'aws_default')

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger when an AWS DMS Serverless replication completes.

   :param replication_config_arn: The ARN of the replication config.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



.. py:class:: DmsReplicationStoppedTrigger(replication_config_arn, waiter_delay = 30, waiter_max_attempts = 60, aws_conn_id = 'aws_default')

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger when an AWS DMS Serverless replication is stopped.

   :param replication_config_arn: The ARN of the replication config.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



.. py:class:: DmsReplicationDeprovisionedTrigger(replication_config_arn, waiter_delay = 30, waiter_max_attempts = 60, aws_conn_id = 'aws_default')

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger when an AWS DMS Serverless replication is de-provisioned.

   :param replication_config_arn: The ARN of the replication config.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



.. py:class:: DmsTaskModifyCompleteTrigger(replication_task_arn, waiter_delay = 30, waiter_max_attempts = 60, aws_conn_id = 'aws_default', verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger when a DMS classic replication task modification completes.

   :param replication_task_arn: The ARN of the replication task.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param verify: Whether or not to verify SSL certificates.
   :param botocore_config: Configuration dictionary (key-values) for botocore client.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



.. py:class:: DmsTableReloadCompleteTrigger(*, replication_task_arn, tables_to_reload, reload_option = 'data-reload', waiter_delay = 30, waiter_max_attempts = 60, aws_conn_id = 'aws_default', region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   Trigger when AWS DMS finishes reloading or validating a set of tables.

   :param replication_task_arn: The ARN of the replication task.
   :param tables_to_reload: Tables being reloaded, including schema and table names.
   :param reload_option: The reload operation whose completion state should be monitored.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: AWS region name.
   :param verify: Whether or not to verify SSL certificates.
   :param botocore_config: Configuration dictionary (key-values) for botocore client.


   .. py:attribute:: replication_task_arn


   .. py:attribute:: tables_to_reload


   .. py:attribute:: reload_option
      :value: 'data-reload'



   .. py:attribute:: waiter_delay
      :value: 30



   .. py:attribute:: waiter_max_attempts
      :value: 60



   .. py:attribute:: aws_conn_id
      :value: 'aws_default'



   .. py:attribute:: region_name
      :value: None



   .. py:attribute:: verify
      :value: None



   .. py:attribute:: botocore_config
      :value: None



   .. py:method:: serialize()

      Serialize trigger arguments and classpath.



   .. py:method:: run()
      :async:


      Poll table statistics until all requested operations finish.



